# gamma

./: .gitignore  .rumdl.toml  CMakeCache.txt  CMakeLists.txt  Doxyfile.in  MainPage.dox  Makefile  README.md  cmake_install.cmake  gamma_test.sh  test.sh  test_game_engine.sh  test_malloc.sh
release/: CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake  gamma
release/html/: annotated.html  batch-mode_8c.html  batch-mode_8c__incl.map  batch-mode_8c__incl.md5  batch-mode_8c_af88bba432a878d05f190ddf2efbbbbcd_cgraph.map  batch-mode_8c_af88bba432a878d05f190ddf2efbbbbcd_cgraph.md5  batch-mode_8h.html  batch-mode_8h__dep__incl.map  batch-mode_8h__dep__incl.md5  batch-mode_8h__incl.map  batch-mode_8h__incl.md5  batch-mode_8h_source.html  classes.html  dir_000001_000006.html  dir_000002_000006.html  dir_000002_000008.html  dir_000006_000001.html  dir_000006_000008.html  dir_000007_000006.html  dir_000007_000008.html  dir_3ea846a96bfacfd447c42d1e225af12e.html  dir_4e0f27db3ea6584ed1a43abbff6909ad.html  dir_4e0f27db3ea6584ed1a43abbff6909ad_dep.map  dir_4e0f27db3ea6584ed1a43abbff6909ad_dep.md5  dir_4e6af703aa76ad4aa9f6277e6166a522.html  dir_547765fa73b14a6727428ac240ad0cd0.html  dir_584e397ccbea550981567de86d5ace60.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7ad25bca70c4d3d9103f75d82f41ef94.html  dir_7ad25bca70c4d3d9103f75d82f41ef94_dep.map  dir_7ad25bca70c4d3d9103f75d82f41ef94_dep.md5  dir_8a63a06b97ec1e69eb6b2537b1056ef4.html  dir_8a63a06b97ec1e69eb6b2537b1056ef4_dep.map  dir_8a63a06b97ec1e69eb6b2537b1056ef4_dep.md5  dir_b16254f30304c6ecee6ffff544c1a023.html  dir_b16254f30304c6ecee6ffff544c1a023_dep.map  dir_b16254f30304c6ecee6ffff544c1a023_dep.md5  error-handling_8c.html  (+152 more)
release/html/search/: all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.html  defines_3.js  defines_4.html  defines_4.js  defines_5.html  defines_5.js  defines_6.html  defines_6.js  defines_7.html  defines_8.html  defines_8.js  defines_9.html  defines_9.js  defines_a.html  defines_a.js  defines_b.html  defines_b.js  defines_c.html  defines_c.js  enums_0.js  (+35 more)
src/: gamma-launch.c  gamma-launch.h  gamma_main.c  gamma_malloc_test.c  gamma_test.c
src/UI/: batch-mode.c  batch-mode.h  error-handling.c  error-handling.h  interactive-mode.c  interactive-mode.h  strings.c  strings.h
src/UI/batch_mode/: batch-mode.c  batch-mode.h
src/UI/interactive_mode/: interactive-mode.c  interactive-mode.h
src/UI/text_lib/: strings.c  strings.h
src/game_engine/: find-union.c  find-union.h  gamma-delete.c  gamma-delete.h  gamma-move.c  gamma-move.h  gamma-moves-assistant-functions.c  gamma-moves-assistant-functions.h  gamma-struct.h  gamma.c  gamma.h
tests/: README  example3.in  example3.out  parse.err  parse.in  parse.out
